# cpp_project_template

./: .buildinfo  .gitignore  ArrivalEvent_8hpp.html  ArrivalEvent_8hpp__incl.map  ArrivalEvent_8hpp__incl.md5  CMakeLists.txt  CheckoutCounter_8hpp.html  CheckoutCounter_8hpp__dep__incl.map  CheckoutCounter_8hpp__dep__incl.md5  CheckoutCounter_8hpp__incl.map  CheckoutCounter_8hpp__incl.md5  Customer_8hpp.html  Customer_8hpp__dep__incl.map  Customer_8hpp__dep__incl.md5  Customer_8hpp__incl.map  Customer_8hpp__incl.md5  DepartureEvent_8hpp.html  DepartureEvent_8hpp__incl.map  DepartureEvent_8hpp__incl.md5  Event_8hpp.html  Event_8hpp__dep__incl.map  Event_8hpp__dep__incl.md5  Event_8hpp__incl.map  Event_8hpp__incl.md5  Parser_8hpp.html  Parser_8hpp__incl.map  Parser_8hpp__incl.md5  README.md  ServiceBeginEvent_8hpp.html  ServiceBeginEvent_8hpp__incl.map  ServiceBeginEvent_8hpp__incl.md5  ServiceDoneEvent_8hpp.html  ServiceDoneEvent_8hpp__incl.map  ServiceDoneEvent_8hpp__incl.md5  ShopSimulation_8hpp.html  ShopSimulation_8hpp__incl.map  ShopSimulation_8hpp__incl.md5  Shop_8hpp.html  Shop_8hpp__dep__incl.map  Shop_8hpp__dep__incl.md5  (+208 more)
.github/workflows/: clang-format-check.yml  docs.yml  doxygen-gh-pages.yml  test-and-coverage.yml
_images/: graphviz-0a1fb953d796b72665f17e299c529c6e70be611c.png.map  graphviz-0c0140246d9d0ceedc02541e60252a45e159d4d4.png.map  graphviz-1e4791b66f7fef83da87ecdcebe45201b9aaedff.png.map  graphviz-23028e9894cdec5e115b00d8c04b096bfdeb7039.png.map  graphviz-4411cc2a6bd3daf679d5ee2c7777dc45869618f8.png.map  graphviz-5f70457d9a3e9869e25cb232c88e2e8e28567ea5.png.map  graphviz-62ec945f1ff8eb51a7491146167ad111322f0e4c.png.map  graphviz-83a320500c091bef52978a9475d2090f4ac86e3b.png.map  graphviz-94bd3c5b528e03e5300cbdf2cb9882aeb75dfc3b.png.map  graphviz-a1a1b560e88a2013b80e5875edfb080ac1fb1dc2.png.map  graphviz-b5f30fc82e5174e848b31d4d0ec65760fc19d7bd.png.map  graphviz-d5efeecff4834278db27174e5f650629e99ac0bc.png.map  graphviz-da734c545d5b4575eae4cbbd34966d996ec0ea13.png.map  graphviz-dc545d50a4dd3d970fa57caed34df1855660841c.png.map  graphviz-f51d9ccdd6873e0f7cd5aea58df9072211c1f288.png.map  graphviz-ffd6941adf93deb7ac012add7e5f4f4f268c9b8b.png.map
_sources/: index.rst.txt
_sources/api/: arrival_event.rst.txt  checkout_counter.rst.txt  departure_event.rst.txt  index.rst.txt  service_begin_event.rst.txt  service_done_event.rst.txt  shop.rst.txt  simulator.rst.txt
api/: arrival_event.html  checkout_counter.html  customer.html  departure_event.html  event.html  index.html  my_compare.html  parser.html  service_begin_event.html  service_done_event.html  shop.html  shop_simulation.html  simulation.html  simulator.html
cmake/: Catch2.cmake  ClangTidy.cmake  CompilerSettings.cmake  CppCheck.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake
docs/: Doxyfile
docs_sphinx/: Doxyfile.in  conf.py  index.rst
docs_sphinx/api/: arrival_event.rst  checkout_counter.rst  customer.rst  departure_event.rst  event.rst  my_compare.rst  parser.rst  service_begin_event.rst  service_done_event.rst  shop.rst  shop_simulation.rst  simulation.rst  simulator.rst
example/: CMakeLists.txt  use_factorial.cpp  use_modulus.cpp  use_stupidHello.cpp
include/basicmath/: factorial.h  modulus.h
include/unsafe/: stupidHello.h
lib/: .clang-format  CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+9 more)
simulation/: CMakeLists.txt  main.cpp
simulation/include/: ArrivalEvent.hpp  CheckoutCounter.hpp  Customer.hpp  DepartureEvent.hpp  Event.hpp  MyCompare.hpp  Parser.hpp  ServiceBeginEvent.hpp  ServiceDoneEvent.hpp  Shop.hpp  ShopSimulation.hpp  Simulation.hpp  Simulator.hpp
simulation/src/: ArrivalEvent.cpp  CMakeLists.txt  CheckoutCounter.cpp  Customer.cpp  DepartureEvent.cpp  Event.cpp  MyCompare.cpp  ServiceBeginEvent.cpp  ServiceDoneEvent.cpp  Shop.cpp  ShopSimulation.cpp  Simulator.cpp
simulation/tests/: CMakeLists.txt  CheckoutCounter.test.cpp  main.cpp
src/: CMakeLists.txt  stupidHello.cpp
src/basicmath/: factorial.cpp  modulus.cpp
tests/: CMakeLists.txt  basicmath.cpp
